<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quiz Application</string>
    <string name="intro">Namal Institue Mianwali \n Quiz app is developed by Mahmood Yousaf</string>
    <string name="wellcome">Well Come to Quiz Application</string>
    <string name="GetStarted">Get Started</string>
    <string name="Login">Login Now</string>
    <string name="Signup">Signup here</string>
    <string name="LoginDetail">Please Login to continue</string>
    <string name="SignupDetail">Please enter your details below for Signup Process</string>
    <string name="SignupAd">Donot have account? Signup</string>
    <string name="AlreadyAccount">Already have account? Login</string>
    <string name="dailyQuizes">Daily Quizes Subject Wise</string>
    <string name="course_name">None</string>
</resources>