<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_namal_png" />

        <TextView
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/SecondaryColor"
            android:textAlignment="center"
            android:text="@string/Login" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/SecondaryColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginDetail" />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_background"
            android:layout_marginTop="32dp"
            android:hint="Enter email here"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:background="@drawable/text_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginTop="16dp"
            android:hint="Enter password here"
            android:textSize="16sp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:background="@drawable/btn_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Login" />

        <TextView
            android:id="@+id/textSinup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:textColor="@color/SecondaryColor"
            android:onClick="@+id/textSinup"
            android:clickable="true"
            android:text="@string/SignupAd"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>